@@ -1,2 +1,2 @@
-// 1.20.2	2024-03-14T20:38:36.779434	Languages: en_us
-98f99d7c4e61a9fc6e83d84d428bc365f6f33666 assets/chilibulletweapons/lang/en_us.json
+// 1.20.2	2024-03-14T21:00:42.7550233	Languages: en_us
+f2c2577ce9ec2e482de1edd997ca4429a95e8e55 assets/chilibulletweapons/lang/en_us.json
