@@ -28,6 +28,7 @@ public class ModCreativeModeTabs {
                 output.accept(ModItems.HALF_CHILI_FISH_SANDWICH);
                 output.accept(ModItems.HALF_CHILI_MEAT_SANDWICH);
                 output.accept(ModItems.HALF_CHILI_POTATO_SANDWICH);
+                output.accept(ModItems.PASTA_OIL_AND_CHILI);
                 output.accept(ModItems.FRIED_CHILI_PEPPER);
 
                 // Weapons
