@@ -6,6 +6,7 @@
 
 ### Added
 - Items for compact storage of chili peppers: `Sack of Bullet-like Chili Peppers` and `Sack of Curved Chili Peppers`.
+- Pasta olio e peperoncino.
 
 ### Changed
 - Increase composting chance of half-sized chili potato sandwich.
